--- a/lab6/lab6.csproj
+++ b/lab6/lab6.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="ClinicTree.cs" />
     <Compile Include="Medicine.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
