--- a/lab9/lab9.csproj
+++ b/lab9/lab9.csproj
@@ -43,6 +43,9 @@
     <Compile Include="Task1.cs" />
     <Compile Include="Task2.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
